# bites-diskspace-tools

./: .gitignore  README.md  email_to_chen.md  pyproject.toml  tasks.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
prores_tools/: __init__.py  __main__.py  cli.py  converter.py  deleter.py  mover.py  report_style.css  reporter.py  trasher.py  utils.py
